# ParallelBelmanFord

./: CMakeLists.txt  Makefile  main.cpp  mpi.cpp  pthreads.cpp
Test/: bellman.txt  bellmanTest0.txt  bellmanTest12.txt  bellmanTest13.txt  bellmanTest14.txt  bellmanTest3.txt  bellmanTest5.txt  bellmanTest7.txt  bellmanTest8.txt  bellmanTest9.txt
